plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/FqnImportAndClassDefinition.groovy
import java.util.Date


<error descr="Name 'Date' is already defined in file">class Date {}</error>